[tool.poetry]
name = "imaginerio-etl"
version = "0.1.0"
description = "imagineRio's ETL pipeline for IIIF and geographic features"
authors = ["Martim Passos <49573683+martimpassos@users.noreply.github.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.0"
iiif-prezi3 = "^1.2.1"
turfpy = "^0.0.7"
geojson = "^3.1.0"
pyproj = "^3.6.1"
xlrd = "^2.0.1"
lxml = "^5.1.0"
pyarrow = "^15.0.0"
moto = {extras = ["s3"], version = "^5.0.2"}
fastkml = "^0.12"
sparqlwrapper = "^2.0.0"
mercantile = "^1.2.1"
openpyxl = "^3.1.2"
arcgis = "^2.2.0.3"
boto3 = "^1.34.79"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=imaginerio-etl --cov-report=term-missing"
